--- a/datanym/assets/IRS527/test.ipynb
+++ b/datanym/assets/IRS527/test.ipynb
@@ -40,36 +40,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import csv, sqlite3\n",
     "import pandas as pd\n",
-    "\n",
+    "from datetime import datetime\n",
     "import sqlite3\n",
     "con = sqlite3.connect(\"/Users/isaacflath/github/codenym/DataPipelines/sqlite_527.db\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T12:12:34.556053Z",
-     "start_time": "2023-11-10T12:12:34.549292Z"
+     "end_time": "2023-11-11T01:13:39.444049Z",
+     "start_time": "2023-11-11T01:13:39.165559Z"
     }
    },
    "id": "fdd3a43a3e8d73dc"
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "outputs": [
     {
-     "data": {
-      "text/plain": "    type                                               name  \\\n0  table                          landing_form8871_entities   \n1  table                                   landing_form8871   \n2  table                                   landing_form8872   \n3  table                         landing_form8871_directors   \n4  table                                 landing_form8872_b   \n5  table                                 landing_form8872_a   \n6  table  organization_aggregated_contributions_expendit...   \n7  table                               landing_form8871_ein   \n8  table                               form8871_ein_landing   \n\n                                            tbl_name  rootpage  \\\n0                          landing_form8871_entities       101   \n1                                   landing_form8871      2537   \n2                                   landing_form8872      2538   \n3                         landing_form8871_directors      8400   \n4                                 landing_form8872_b     17502   \n5                                 landing_form8872_a    225025   \n6  organization_aggregated_contributions_expendit...    488132   \n7                               landing_form8871_ein         2   \n8                               form8871_ein_landing    488180   \n\n                                                 sql  \n0  CREATE TABLE \"landing_form8871_entities\" (\\n\"r...  \n1  CREATE TABLE \"landing_form8871\" (\\n\"record_typ...  \n2  CREATE TABLE \"landing_form8872\" (\\n\"record_typ...  \n3  CREATE TABLE \"landing_form8871_directors\" (\\n\"...  \n4  CREATE TABLE \"landing_form8872_b\" (\\n\"record_t...  \n5  CREATE TABLE \"landing_form8872_a\" (\\n\"record_t...  \n6  CREATE TABLE organization_aggregated_contribut...  \n7  CREATE TABLE \"landing_form8871_ein\" (\\n\"record...  \n8  CREATE TABLE \"form8871_ein_landing\" (\\n\"record...  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>type</th>\n      <th>name</th>\n      <th>tbl_name</th>\n      <th>rootpage</th>\n      <th>sql</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>table</td>\n      <td>landing_form8871_entities</td>\n      <td>landing_form8871_entities</td>\n      <td>101</td>\n      <td>CREATE TABLE \"landing_form8871_entities\" (\\n\"r...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>table</td>\n      <td>landing_form8871</td>\n      <td>landing_form8871</td>\n      <td>2537</td>\n      <td>CREATE TABLE \"landing_form8871\" (\\n\"record_typ...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>table</td>\n      <td>landing_form8872</td>\n      <td>landing_form8872</td>\n      <td>2538</td>\n      <td>CREATE TABLE \"landing_form8872\" (\\n\"record_typ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>table</td>\n      <td>landing_form8871_directors</td>\n      <td>landing_form8871_directors</td>\n      <td>8400</td>\n      <td>CREATE TABLE \"landing_form8871_directors\" (\\n\"...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>table</td>\n      <td>landing_form8872_b</td>\n      <td>landing_form8872_b</td>\n      <td>17502</td>\n      <td>CREATE TABLE \"landing_form8872_b\" (\\n\"record_t...</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>table</td>\n      <td>landing_form8872_a</td>\n      <td>landing_form8872_a</td>\n      <td>225025</td>\n      <td>CREATE TABLE \"landing_form8872_a\" (\\n\"record_t...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>table</td>\n      <td>organization_aggregated_contributions_expendit...</td>\n      <td>organization_aggregated_contributions_expendit...</td>\n      <td>488132</td>\n      <td>CREATE TABLE organization_aggregated_contribut...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>table</td>\n      <td>landing_form8871_ein</td>\n      <td>landing_form8871_ein</td>\n      <td>2</td>\n      <td>CREATE TABLE \"landing_form8871_ein\" (\\n\"record...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>table</td>\n      <td>form8871_ein_landing</td>\n      <td>form8871_ein_landing</td>\n      <td>488180</td>\n      <td>CREATE TABLE \"form8871_ein_landing\" (\\n\"record...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-11-10 20:13:39.683297 : drop table recipients_contributors\n",
+      "2023-11-10 20:13:39.725281 :  create table recipients_contributors   \n",
+      "2023-11-10 20:13:39.725761 :   insert into     recipients_contributor\n",
+      "2023-11-10 20:13:40.607024 :   drop table form8872_schedule_a\n",
+      "2023-11-10 20:13:40.608022 :  CREATE TABLE form8872_schedule_a     ( \n",
+      "2023-11-10 20:13:40.608440 :   drop table form8872_schedule_b\n",
+      "2023-11-10 20:13:40.609047 :  CREATE TABLE form8872_schedule_b     ( \n",
+      "2023-11-10 20:13:40.609368 :   drop table form8872\n",
+      "2023-11-10 20:13:40.609663 :  CREATE TABLE form8872     (         for\n",
+      "2023-11-10 20:13:40.610013 :    insert into     form8872_schedule_a (\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function for runing sql file with many statements and print time elapsed for each one\n",
+    "def run_sql_file(sql_filepath):\n",
+    "    with open(sql_filepath, 'r') as f:\n",
+    "        sql = f.read()\n",
+    "    sql_commands = sql.split(';')\n",
+    "    for command in sql_commands:\n",
+    "        sample = command[:40].replace('\\n', ' ')\n",
+    "        print(f\"{datetime.now()} : {sample}\")\n",
+    "        con.execute(command)\n",
+    "        con.commit()\n",
+    "    con.close()\n",
+    "run_sql_file('8872.sql')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-11-11T01:13:39.684483Z"
+    }
+   },
+   "id": "f76cf2544dc19b00"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "654bb3039e127d9c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e967780eb87999c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c7f3b49e60c34867"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "ename": "DatabaseError",
+     "evalue": "Execution failed on sql 'select * from sqlite_schema limit 10': database is locked",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mOperationalError\u001B[0m                          Traceback (most recent call last)",
+      "File \u001B[0;32m~/github/codenym/DataPipelines/venv/lib/python3.9/site-packages/pandas/io/sql.py:2262\u001B[0m, in \u001B[0;36mSQLiteDatabase.execute\u001B[0;34m(self, sql, params)\u001B[0m\n\u001B[1;32m   2261\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[0;32m-> 2262\u001B[0m     \u001B[43mcur\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43msql\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   2263\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m cur\n",
+      "\u001B[0;31mOperationalError\u001B[0m: database is locked",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001B[0;31mDatabaseError\u001B[0m                             Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[20], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_sql\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mselect * from sqlite_schema limit 10\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mcon\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/github/codenym/DataPipelines/venv/lib/python3.9/site-packages/pandas/io/sql.py:654\u001B[0m, in \u001B[0;36mread_sql\u001B[0;34m(sql, con, index_col, coerce_float, params, parse_dates, columns, chunksize, dtype_backend, dtype)\u001B[0m\n\u001B[1;32m    652\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m pandasSQL_builder(con) \u001B[38;5;28;01mas\u001B[39;00m pandas_sql:\n\u001B[1;32m    653\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(pandas_sql, SQLiteDatabase):\n\u001B[0;32m--> 654\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mpandas_sql\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_query\u001B[49m\u001B[43m(\u001B[49m\n\u001B[1;32m    655\u001B[0m \u001B[43m            \u001B[49m\u001B[43msql\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    656\u001B[0m \u001B[43m            \u001B[49m\u001B[43mindex_col\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mindex_col\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    657\u001B[0m \u001B[43m            \u001B[49m\u001B[43mparams\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mparams\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    658\u001B[0m \u001B[43m            \u001B[49m\u001B[43mcoerce_float\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mcoerce_float\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    659\u001B[0m \u001B[43m            \u001B[49m\u001B[43mparse_dates\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mparse_dates\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    660\u001B[0m \u001B[43m            \u001B[49m\u001B[43mchunksize\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mchunksize\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    661\u001B[0m \u001B[43m            \u001B[49m\u001B[43mdtype_backend\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype_backend\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    662\u001B[0m \u001B[43m            \u001B[49m\u001B[43mdtype\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mdtype\u001B[49m\u001B[43m,\u001B[49m\n\u001B[1;32m    663\u001B[0m \u001B[43m        \u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    665\u001B[0m     \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m    666\u001B[0m         _is_table_name \u001B[38;5;241m=\u001B[39m pandas_sql\u001B[38;5;241m.\u001B[39mhas_table(sql)\n",
+      "File \u001B[0;32m~/github/codenym/DataPipelines/venv/lib/python3.9/site-packages/pandas/io/sql.py:2326\u001B[0m, in \u001B[0;36mSQLiteDatabase.read_query\u001B[0;34m(self, sql, index_col, coerce_float, parse_dates, params, chunksize, dtype, dtype_backend)\u001B[0m\n\u001B[1;32m   2315\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mread_query\u001B[39m(\n\u001B[1;32m   2316\u001B[0m     \u001B[38;5;28mself\u001B[39m,\n\u001B[1;32m   2317\u001B[0m     sql,\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m   2324\u001B[0m     dtype_backend: DtypeBackend \u001B[38;5;241m|\u001B[39m Literal[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumpy\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mnumpy\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m   2325\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m DataFrame \u001B[38;5;241m|\u001B[39m Iterator[DataFrame]:\n\u001B[0;32m-> 2326\u001B[0m     cursor \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mexecute\u001B[49m\u001B[43m(\u001B[49m\u001B[43msql\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mparams\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   2327\u001B[0m     columns \u001B[38;5;241m=\u001B[39m [col_desc[\u001B[38;5;241m0\u001B[39m] \u001B[38;5;28;01mfor\u001B[39;00m col_desc \u001B[38;5;129;01min\u001B[39;00m cursor\u001B[38;5;241m.\u001B[39mdescription]\n\u001B[1;32m   2329\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m chunksize \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n",
+      "File \u001B[0;32m~/github/codenym/DataPipelines/venv/lib/python3.9/site-packages/pandas/io/sql.py:2274\u001B[0m, in \u001B[0;36mSQLiteDatabase.execute\u001B[0;34m(self, sql, params)\u001B[0m\n\u001B[1;32m   2271\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m ex \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01minner_exc\u001B[39;00m\n\u001B[1;32m   2273\u001B[0m ex \u001B[38;5;241m=\u001B[39m DatabaseError(\u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mExecution failed on sql \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;132;01m{\u001B[39;00msql\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m: \u001B[39m\u001B[38;5;132;01m{\u001B[39;00mexc\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m-> 2274\u001B[0m \u001B[38;5;28;01mraise\u001B[39;00m ex \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mexc\u001B[39;00m\n",
+      "\u001B[0;31mDatabaseError\u001B[0m: Execution failed on sql 'select * from sqlite_schema limit 10': database is locked"
+     ]
     }
    ],
    "source": [
@@ -78,8 +161,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-10T12:12:34.693245Z",
-     "start_time": "2023-11-10T12:12:34.686614Z"
+     "end_time": "2023-11-11T00:47:35.070151Z",
+     "start_time": "2023-11-11T00:47:29.600988Z"
     }
    },
    "id": "c2acaf68810e721e"
